fix: dark mode button not fully white on hover (#97)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -339,5 +339,5 @@ hr {
 
 .heroButton:hover {
   color: white;
-  background-color: var(--ifm-color-primary-lighter);
+  background-color: var(--p1);
 }
